# node-wasi-examples

./: .gitignore  package-lock.json  package.json  readme.md  wasi.js  wasi2.js
examples/rust-wasi-helloworld-lib/: Cargo.toml
examples/rust-wasi-helloworld-lib/src/: lib.rs
examples/rust-wasi-readfile/: Cargo.toml
examples/rust-wasi-readfile/src/: lib.rs
examples/rust-wasi2/: Cargo.toml  output.wit
examples/rust-wasi2/src/: bindings.rs  lib.rs
examples/rust-wasi2/wit/: world.wit
